# transaction-api-test-task

./: .dockerignore  .env.prod.sample  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
transaction_service/: asgi.py  settings.py  urls.py  wsgi.py
transactions/: admin.py  models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
user/: admin.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_improved_user.py
